# box-intersect-lib

./: .gitignore  Cargo.toml  Dockerfile.build-manylinux  Dockerfile.test
.github/workflows/: CI.yml  publish.yml  test-linux.yml
box-intersect-lib-py/: pyproject.toml
box-intersect-lib-py/src/: lib.rs
crates/box-intersect-lib/: Cargo.toml
crates/box-intersect-lib-py/: Cargo.toml  pyproject.toml
crates/box-intersect-lib-py/test/: test_integration.py
crates/box-intersect-lib/src/: efficient_coverage.rs  find_intersecting.rs  find_intersecting_asym.rs  intersect_calc.rs  lib.rs  non_max_suppression.rs
scripts/: build.sh  lint.sh  unit-test.sh
