[package]
name = "box_intersect_lib_py"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true


[lib]
crate-type = ["cdylib"]

[dependencies]
box-intersect-lib = { path = "../box-intersect-lib" }
pyo3 = { version = "0.26.0", features = ["extension-module"] }
numpy = "0.26.0"
