[package]
name = "box-intersect-lib"
version.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

[dev-dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
